Modified to run with 3 threads

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,15 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+		<!-- Maven Checkstyle properties - identical for build and reports plugins -->
+		<maven-checkstyle-plugin.version>2.9.1</maven-checkstyle-plugin.version>
+		<maven-checkstyle-plugin.config.includeTestSourceDirectory>true</maven-checkstyle-plugin.config.includeTestSourceDirectory>
+		<maven-checkstyle-plugin.config.configLocation>checkstyle/sun_checks.xml</maven-checkstyle-plugin.config.configLocation>
+		<!-- Suppressions are ignored as file not found -->
+		<maven-checkstyle-plugin.config.suppressionLocation>checkstyle/checkstyle-suppressions.xml</maven-checkstyle-plugin.config.suppressionLocation>
+        <maven-checkstyle-plugin.config.suppressionsFileExpression>checkstyle.suppressions.file</maven-checkstyle-plugin.config.suppressionsFileExpression>
+
 	</properties>
 
 	<dependencies>
@@ -75,13 +84,19 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>checkstyle</groupId>
+			<artifactId>checkstyle</artifactId>
+			<version>5.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<pluginManagement>
 			<plugins>
-				<plugin>
-					<!-- Required to add copy-dependency target so logging lib used from command line is also in Eclipse build -->
+
+				<!-- Required to add copy-dependency target so logging lib used from command line is also in Eclipse build -->
+				<plugin>	
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
 					<version>1.0.0</version>
@@ -105,11 +120,14 @@
 						</lifecycleMappingMetadata>
 					</configuration>
 				</plugin>
+
 			</plugins>
 		</pluginManagement>
+
 		<plugins>
+
+			<!-- Specify which version of java we should compile as -->
 			<plugin>
-				<!-- Specify which version of java we should compile as -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
@@ -118,8 +136,9 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+
+			<!-- Create a jar file and specify the mainClass to make it executable -->
 			<plugin>
-				<!-- Create a jar file and specify the mainClass to make it executable -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.4</version>
@@ -134,9 +153,10 @@
 					</archive>
 				</configuration>
 			</plugin>
+
+			<!-- Required to move logging lib when executing standalone from commandline -->
+			<!-- NOTE: Forces us to add org.eclipse.m2e lifecycle-mapping in pluginManagement-->
 			<plugin>
-				<!-- Required to move logging lib when executing standalone from commandline -->
-				<!-- NOTE: Forces us to add org.eclipse.m2e lifecycle-mapping in pluginManagement-->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<version>2.8</version>
@@ -156,6 +176,42 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<!-- This is checkstyle config for mvn checkstyle:checkstyle -->
+			<plugin>
+			        <groupId>org.apache.maven.plugins</groupId>
+			        <artifactId>maven-checkstyle-plugin</artifactId>
+			        <version>${maven-checkstyle-plugin.version}</version>
+			        <configuration>
+			        	<includeTestSourceDirectory>${maven-checkstyle-plugin.config.includeTestSourceDirectory}</includeTestSourceDirectory>
+			        	<configLocation>${maven-checkstyle-plugin.config.configLocation}</configLocation>
+			        	<!-- Suppressions are ignored as file not found -->
+			        	<suppressionsLocation>${maven-checkstyle-plugin.config.suppressionLocation}</suppressionsLocation>
+          			    <suppressionsFileExpression>${maven-checkstyle-plugin.config.suppressionsFileExpression}</suppressionsFileExpression>
+			        </configuration>
+		    </plugin>
+
 		</plugins>
 	</build>
+
+	<reporting>
+	    <plugins>
+	    
+	    	  <!-- This is checkstyle config for mvn site -->
+		      <plugin>      
+			        <groupId>org.apache.maven.plugins</groupId>
+			        <artifactId>maven-checkstyle-plugin</artifactId>
+			        <version>${maven-checkstyle-plugin.version}</version>
+			        <configuration>
+			        	<includeTestSourceDirectory>${maven-checkstyle-plugin.config.includeTestSourceDirectory}</includeTestSourceDirectory>
+			        	<configLocation>${maven-checkstyle-plugin.config.configLocation}</configLocation>
+			        	<!-- Suppressions are ignored as file not found -->
+			        	<suppressionsLocation>${maven-checkstyle-plugin.config.suppressionLocation}</suppressionsLocation>
+          			    <suppressionsFileExpression>${maven-checkstyle-plugin.config.suppressionsFileExpression}</suppressionsFileExpression>
+			        </configuration>
+		      </plugin>
+
+	    </plugins>
+  </reporting>
+
 </project>
