--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
 			<artifactId>checkstyle</artifactId>
 			<version>5.0</version>
 		</dependency>
+		<dependency>
+		    <!-- jsoup HTML parser library @ http://jsoup.org/ -->
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.7.2</version>
+        </dependency>
 	</dependencies>
 
 	<build>
